<resources>

    <string name="app_name">NoLifeAgenda</string>
    <string name="bouton_ajouter">Ajouter</string>
    <string name="valider">Valider</string>
    <string name="rappelSonore">Rappel sonore</string>
    <string name="daily">Prévu pour le </string>
    <string name="previewText">Preview du calendrier</string>
    <string name="indic_flux">URL du flux RSS</string>
    <string name="titreRappel">Titre du rappel</string>
    <string name="noteRappel">Note du rappel</string>
    <string name="niveauImpRappel">Niveau d\'importance du rappel</string>
    <string name="reminderTitle">Me rappeler :</string>
    <string-array name="reminderEntries">
        <item>10 minutes avant</item>
        <item>30 minutes avant</item>
        <item>1 heure avant</item>
        <item>2 heures avant</item>
        <item>1 jour avant</item>
    </string-array>
    <string name="nomListe">Nom de la liste</string>
    <string name="elemAjout">Element à ajouter à la liste</string>
    <string name="ajoutElemBouton">Ajouter l\'élément</string>
    <string name="noteListeElem">Cliquez sur un élément pour le supprimer de la liste</string>
    <string name="nomPatron">Nom du patron d\'activité</string>
    <string-array name="patronListeEntries">
        <item>Séléctionner un type d\'activités :</item>
        <item>PVP (Players vs Players)</item>
        <item>PVE (Players vs Events)</item>
        <item>Réunion de guilde</item>
    </string-array>

</resources>
