<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/validerBouton"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:onClick="onValidation"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/nomListe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateListe"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/liste_ico" />

    <EditText
        android:id="@+id/dateListe"
        style="@android:style/Widget.DeviceDefault.DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:onClick="onSelectText"
        android:text="@string/nomListe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateListe" />

    <EditText
        android:id="@+id/elemAAjouter"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="onSelectText"
        android:text="@string/elemAjout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomListe" />

    <Button
        android:id="@+id/addElemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ajoutElemBouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elemAAjouter" />

    <LinearLayout
        android:id="@+id/dailyTaskLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/validerBouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/elem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Element 1"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/elem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Element 2"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/elem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Element 3"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/noteListeElem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addElemButton" />

</android.support.constraint.ConstraintLayout>